blog/css/2026-01-22.css
html * {
  font-family: "Roboto", sans-serif;
}

body {
  font-size: small;
  background: radial-gradient(rgb(232, 212, 212), rgb(207, 207, 238));
  height: 90vh;
}

#container {
  max-width: 700px;
  margin: auto;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  border: 1px solid rgb(139, 137, 146);
  background-color: rgb(176, 178, 199);
}

#title {
  color: black;
  background: linear-gradient(to bottom, rgb(176, 178, 199), #f9f9f9, #dbdbdb);
  padding: 5px 10px;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  border-bottom: 1px solid rgb(139, 137, 146);
  display: flex;
  align-items: center;
}

#title img {
  margin-right: 5px;
  width: 15px;
}

#content {
  padding: 10px 20px;
  color: black;
  background-color: white;
}

#content div {
  text-align: center;
}

#footer {
  height: 30px;
  display: flex;
  position: fixed;
  bottom: 0;
  width: 100%;
  left: 0;
  border-top: 1px solid rgb(139, 137, 146);
  padding: 0;
  background: linear-gradient(to bottom, rgb(176, 178, 199), #f9f9f9, #dbdbdb);
}

#left-box {
  background: linear-gradient(to bottom, rgb(254, 230, 240), rgb(240, 207, 234), rgb(223, 106, 175), rgb(232, 171, 207));
  width: 105px;
  border-right: 1px solid;
  border-top-right-radius: 9px;
  border-bottom-right-radius: 9px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-style: italic;
  font-weight: bold;
  font-size: medium;
  color: white;
  text-shadow: 2px 2px 5px black;
}

#left-box img {
  margin-left: -10px;
  margin-right: 5px;
}

#right-box {
  margin-left: 5px;
  display: flex;
  align-items: center;
}

#open-program {
  background: linear-gradient(to bottom, rgb(102, 112, 124), rgb(100, 113, 122), rgb(117, 127, 136), rgb(128, 138, 150));
  max-width: 150px;
  display: flex;
  align-items: center;
  border: 2px solid rgb(111, 120, 135);
  color: white;
  border-radius: 3px;
  height: 75%;
  padding: 0px 5px;
  margin-left: 5px;
}

#open-program span {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: block;
}

#open-program img {
  margin: 0px 5px;
}

li::marker,
a {
  color: rgb(223, 106, 175);
}

